--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <a href="https://www.instagram.com/sfilipasikj/" target="_blank"><img src="images/instagram.png" alt="instagram"></a>
                 <a href="https://github.com/sfilipasikj" target="_blank"><img src="images/github.png" alt="github"></a>
                 <button class="cv">
-                    <a href="CV%20-%20Stefanija%20Filipasikj.doc" download> download cv</a>
+                    <a href="CV%20-%20Stefanija%20Filipasikj.pdf" download> download cv</a>
                 </button>
             </div>
         </div>
